[package]
name = "radio-controllers"
version = "0.1.5"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-radio-controllers"
description = "Drivers for SBUS, IBUS, and Crossfire/ExpressLRS receivers."
keywords = ["sbus", "ibus", "crossfire", "express_lrs", "no_std"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
    "aerospace::drones",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = ["libm"]
#default = ["libm", "serde"]
#default = ["std"]
#default = ["std", "serde"]
std = []
libm = ["dep:libm"]
serde = ["dep:serde", "postcard", "sequential-storage", "simple-bitset/serde"]

[dependencies]
libm = { version = "0.2.16", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"], optional = true }
sequential-storage = { version = "7.2.0", features = ["postcard"], optional = true }
simple-bitset = "0.1.1"
#simple-bitset = { git = "https://github.com/martinbudden/crate-simple-bitset" }
#simple-bitset = { path = "../simple-bitset" }
embedded-hal-nb = { version ="1.0.0", default-features = false }
embedded-hal = { version = "1.0.0", default-features = false }
nb = "1.1.0"

[dev-dependencies]
# This allows 'cargo test' to work on a PC
embedded-hal-nb = "1.0.0"

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
